Change projects web address

--- a/index.html
+++ b/index.html
@@ -238,21 +238,21 @@
                 <img src="./images/Coffee_shop1.jpeg" style="width:300px; margin-bottom:20px">
                 <h3 style="margin-bottom:20px">COFFEE SHOP WEB APP</h3>
                 <p style="margin-bottom:40px">Coffee Ordering App Solution built with React and Tailwind CSS</p>
-                <div class="btn-proj"><a href="http://localhost:5173" target="_blank">Review Project</a></div>
+                <div class="btn-proj"><a href="https://symond0127.github.io/syliza-cafe/" target="_blank">Review Project</a></div>
             </div>
 
             <div class="project-card" style="height:400px">
                 <img src="./images/testcal.png" style="width:300px; margin-bottom:20px">
                 <h3 style="margin-bottom:20px">CALIBRATION DATABASE</h3>
                 <p style="margin-bottom:40px">Display a real-time database using HTML, CSS, Javascript, PHP and MySQL</p>
-                <div class="btn-proj"><a href="http://localhost:5173" target="_blank">Review Project</a></div>
+                <div class="btn-proj"><a href="https://symond0127.github.io/testcalibration/" target="_blank">Review Project</a></div>
             </div>
 
             <div class="project-card" style="height:400px">
                 <img src="./images/portfolio.png" style="width:300px; margin-bottom:20px">
                 <h3 style="margin-bottom:20px">PERSONAL PORTFOLIO</h3>
                 <p style="margin-bottom:40px">Showcase my portfolio built with HTML, CSS and Javascript</p>
-                <div class="btn-proj"><a href="http://localhost:5173" target="_blank">Review Project</a></div>
+                <div class="btn-proj"><a href="https://symond0127.github.io/web-portfolio/" target="_blank">Review Project</a></div>
             </div>
         </div>
 
