Change Java to Python, Add edsar.png

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 
             <div class="skills-box">
                 <div class="skills-box-content">
-                    <i class='bx bxl-java' style="color: #1589FF"></i>
-                    <span>JAVA</span>
+                    <i class='bx bxl-python' style="color: #1589FF"></i>
+                    <span>PYTHON</span>
                 </div>
                 <div class="skills-box-bar">
                     <span style="width: 75%"></span>
@@ -259,6 +259,12 @@
         <div class="web-apps" style="margin-top: 120px"><h2 data-text="SOFTWARE/DESKTOP APPLICATIONS">SOFTWARE/DESKTOP APPLICATIONS</h2></div>
 
         <div class="projects-box" style="margin-top:30px">
+			<div class="project-card">
+                <img src="./softproj/edsar.png" style="width:300px; height:300px">
+                <h3>REPORT HISTORY VIEWER</h3>
+                <p style="margin-bottom:10px">Report history finder and viewer built with WPF and C#</p>
+            </div>
+			
             <div class="project-card">
                 <img src="./softproj/checksheet.png" style="width:300px; height:300px">
                 <h3>ONLINE CHECKSHEET</h3>
@@ -280,13 +286,13 @@
             <div class="project-card">
                 <img src="./softproj/hold.jpg" style="width:300px; height:300px;">
                 <h3>DAILY REPORT VIEWER</h3>
-                <p style="margin-bottom:10px">Automatic real-time update of reports per Department using Java</p>
+                <p style="margin-bottom:10px">Automatic real-time update of reports per Department using C#</p>
             </div>
 
             <div class="project-card">
                 <img src="./softproj/rfid.jpg" style="width:300px; height:300px">
                 <h3>ATTENDANCE SYSTEM</h3>
-                <p style="margin-bottom:10px">C# Application monitoring employees attendance using RFID</p>
+                <p style="margin-bottom:10px">VB Application for monitoring employees attendance using RFID</p>
             </div>
         </div>
     </section>
